@@ -1,30 +1,65 @@
-##General
+## General
+# This configures the Base directory for your Backupdir
+# This direcotory should be reachable on your local machine.
 BACKUPDIR="/root/.etcbackup/"
+
+# This configures the directories to use when use the "check" command
+# The "check command" invokes creating a exact copy from your original
+# than syncs back and shows what the difference is 
 COMPAREDIR="/root/.etccomp/"
+
+# This is the File where your excludes gets stored 
+# excludes are regular expressions or globbing patternsmatching against 
+# a file  which is understandable by rsync
+# when an exclude pattern matches a filename in /etc this filename is
+# not going to be backed up
 EXCLUDEFILE="/root/.etcbackup/excludes"
+
+# This is the file where etckkeper logs the differences between your 
+# backup directory and your current directory
 LOGFILE="/root/keeper.log"
 
-#FuTURE
-#disable check for permissions
-#usefull if you need to save on fat like filesystems
-#however not recommended
-#DISABLE_PEMRS=0
+# This is the file where etckeeper logs his history
+# this would be pretty much the same what you would see when you execute t
+# he "list command"
+#JOURNAL="root/.etcbackup//journal.log"
 
-#MULTIPLEDIRS="no"
 
-#use cmprossion for checking
-#COMPRESS=1
+# If this variable is set to 1 
+# This will disable checking for filesystem permissions
+# Note that if you do use a fat filesystem for backup
+# you should reset to 0 if you restore from here
+DISABLE_PERMS=0
 
-#use encryption 
-#ENCRYPT=1
+# FuTURE
+# disable check for permissions
+# usefull if you need to save on fat like filesystems
+# however not recommended
+# DISABLE_PEMRS=0
 
-##Settings for Cronjobs
-#Set Cron to 1 if you want to check whether etckeeper is configured as
-#a cronjob
+# people on this computer who are allowed to execute this script
+# ALLOWED=user1:user2
+# DENIED=user3:user4
 
-#CRON=0
 
-#when using etckeeper-ng as cronjob, use weekly daily, hourly, monthly
-#to specify how often this job gets executed 
+# MULTIPLEDIRS="no"
+# BACKUPDIR0="foo"
+# BACKUPDIR1=="bar"
+# ...
 
-#CRON_PERIOD="never"
+# use compression for backup
+# COMPRESS=1
+
+# use encryption for backup
+# ENCRYPT=1
+
+## Settings for Cronjobs
+# Set Cron to 1 if you want to check whether etckeeper is configured as
+# a cronjob
+
+# CRON=0
+
+# when using etckeeper-ng as cronjob, use weekly daily, hourly, monthly
+# to specify how often this job gets executed 
+
+# CRON_PERIOD="never"
